--- a/MethodsandObjectsAssignment/MethodsandObjectsAssignment/MethodsandObjectsAssignment.csproj
+++ b/MethodsandObjectsAssignment/MethodsandObjectsAssignment/MethodsandObjectsAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8A07B792-D3D0-4E26-A5F7-38524808EF26}</ProjectGuid>
+    <ProjectGuid>{5094CA75-0E10-464E-90EE-8B5F8F22E176}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MethodClassAssignmentSubmission</RootNamespace>
-    <AssemblyName>MethodClassAssignmentSubmission</AssemblyName>
+    <RootNamespace>MethodsandObjectsAssignment</RootNamespace>
+    <AssemblyName>MethodsandObjectsAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MathOperation1.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
