--- a/AbstractClassAssignment/AbstractClassAssignment/AbstractClassAssignment.csproj
+++ b/AbstractClassAssignment/AbstractClassAssignment/AbstractClassAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8A07B792-D3D0-4E26-A5F7-38524808EF26}</ProjectGuid>
+    <ProjectGuid>{DF7260C3-5F99-4D36-98BA-AE63729F4B7D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MethodClassAssignmentSubmission</RootNamespace>
-    <AssemblyName>MethodClassAssignmentSubmission</AssemblyName>
+    <RootNamespace>AbstractClassAssignment</RootNamespace>
+    <AssemblyName>AbstractClassAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MathOperation1.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
